--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>My First Heading</h1>
 
-<p>My first paragraph.</p>
+<p style="background-color:tomato;">My first paragraph.</p>
 
 </body>
 </html>
