--- a/web-root/index.html
+++ b/web-root/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>My First Heading - Edited By NS - to be pushed to GitHub</h1>
 
-<p style="background-color:tomato;">My first paragraph.</p>
+<p style="background-color:red;">My first paragraph - Please read carefully.</p>
 
 </body>
 </html>
